# LISTING-INTELLIGENCE

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.command  start.sh  test_models.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py  schemas.py
config/: __init__.py  composition_policies.yaml  logging_config.yaml  model_config.yaml  prompts.yaml
docs/: ANALYSIS_REPORT.md  API.md  CAREER_POSITIONING.md  ECOMMERCE_GUIDE.md  EXPORT_GUIDE.md  IMPLEMENTATION_GUIDE.md  INDUSTRY_TEMPLATES.md  NEW_FEATURES.md  QUICKSTART.md  UTILITY_ANALYSIS.md  UTILITY_ANALYSIS_RU.md  UTILITY_SUMMARY.md
examples/: __init__.py  analyze_chart.py  analyze_pdf.py  analyze_ui.py  batch_analysis.py  custom_analysis.py  pdf_export_example.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx  index.css  splash.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BatchProgress.tsx  ErrorBoundary.tsx  FileUpload.tsx  HelpSection.tsx  HistoryView.tsx  MarkdownContent.tsx  ResultsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TemplateSelector.tsx
frontend/src/components/ecommerce/: BulkUpload.tsx  CompetitorCompare.tsx  ComplianceFixStudio.tsx  ComplianceReport.tsx  EcommerceTools.tsx  ExportCSV.tsx  MarketplaceSelector.tsx  ProductAnalysis.tsx  SEOPreview.tsx
frontend/src/hooks/: useAnalysis.ts  useBulkUpload.ts  useConfig.ts  useHistory.ts  useObjectUrlPreviews.ts  useProductAnalysis.ts  useWebSocket.ts
frontend/src/utils/: analysis.ts  analysisCache.ts  customSettings.ts  ecommerceParsing.ts  export.ts  historyStorage.ts
frontend/tests/e2e/: compliance-to-fix-studio.spec.ts  fix-studio.spec.ts
src/: __init__.py  config.py  ollama_client.py  pdf_exporter.py  pdf_processor.py  report_generator.py  vision_agent.py
src/ecommerce/: __init__.py  batch_processor.py  compliance_fixer.py  florence_analyzer.py  foreground_masking.py  ic_light_relighting.py  image_upscaler.py  lama_eraser.py  listing_service.py  marketplace_rules.py  object_detector.py  outpainter.py  product_analyzer.py  quality_scorer.py  seo_generator.py  text_detector.py
src/handlers/: __init__.py  error_handler.py
src/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
src/providers/: azure_provider.py  factory.py  ollama_provider.py  openai_provider.py
src/utils/: __init__.py  cache.py  cost_tracker.py  export.py  logger.py  progress.py  rate_limiter.py  token_counter.py
tests/: conftest.py  test_api.py  test_cache.py  test_compliance_fixer.py  test_config.py  test_cost_tracker.py  test_export.py  test_foreground_masking.py  test_image_upscaler.py  test_listing_service.py  test_outpainter.py  test_pdf_processor.py  test_providers.py  test_rate_limiter.py  test_vision_agent.py
tests/fixtures/: README.md  generate_fixtures.py
