[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-agent-analyst"
version = "1.0.1b0"
description = "AI-powered visual analysis platform for e-commerce product photos, charts, and documents"
readme = "README.md"
license = {text = "PolyForm Noncommercial 1.0.0"}
requires-python = ">=3.10"
dependencies = [
    # Core
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "pymupdf>=1.23.0",
    "markdown>=3.5.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    # LLM Providers
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "google-generativeai>=0.3.0",
    # HTTP client (must be compatible with LLM provider SDKs)
    "httpx>=0.27.0,<0.28.0",
    # Configuration
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Token counting
    "tiktoken>=0.6.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    # Report generation
    "reportlab>=4.0.0",
    # Image AI helpers
    "numpy>=1.26.0",
    "transformers>=4.48.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "einops>=0.8.0",
    "kornia>=0.8.0",
    "timm>=1.0.0",
    # AI models: detection, OCR, quality, upscaling
    "ultralytics>=8.3.0",
    "easyocr>=1.7.0",
    "pyiqa>=0.1.12",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "simple-lama-inpainting>=0.1.0",
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "safetensors>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0,<0.28.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",
    "I001",
    "E741",
    "N806",
    "UP038",
    "B007",
    "B008",
    "B904",
    "F401",
    "F841",
    "SIM105",
    "SIM108",
    "SIM117",
    "SIM118",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = [
    "abstract",
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "import-untyped",
    "index",
    "misc",
    "no-any-return",
    "operator",
    "return-value",
    "union-attr",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["src*", "config*", "api*"]
